--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -81,9 +81,9 @@ sim-time-limit = 70s
 **.deployer.ruRange = 50
 **.deployer.ruTxPower = "50,50,50;"
 **.deployer.antennaCws = "2;" # !!MACRO + RUS (numRus + 1)
-**.deployer.numRbDl = 25
-**.deployer.numRbUl = 25
-**.numBands = 25
+**.deployer.numRbDl = 48
+**.deployer.numRbUl = 48
+**.numBands = 48
 **.fbDelay = 1
 
 # Enable handover
@@ -209,5 +209,38 @@ sim-time-limit = 70s
 # enrolled multicast groups must be set in the HostAutoConfigurator (instead of demo.xml), seperated by a single space character
 *.car[*].configurator.mcastGroups = "224.0.0.10"
 
+# ----------------------------------------------------------------------------- #
+# Config "C-V2XMode4"
+#
+# In this configuration, a transmitting car sends periodic alert messages to neighboring vehicles using C-V2X Mode 4
+#
 
+[Config C-V2XMode4]
+### Enable D2D for the eNodeB and the UEs involved in direct communications ###
+#*.eNodeB*.d2dCapable = true
+*.car[*].mode4Capable = true
+**.amcMode = "D2D"
+
+### Select CQI for D2D transmissions ###
+# One-to-Many communications work with fixed CQI values only.
+# Set the parameter **.usePreconfiguredTxParams and select the desired CQI using the parameter **.d2dCqi
+**.usePreconfiguredTxParams = true
+#**.d2dCqi = ${cqi=7}
+
+### Traffic configuration: one-to-many traffic between UEs (car[0] --> car[1..9]) ###
+*.car[*].numUdpApps = 1
+
+# Transmitter
+*.car[0].udpApp[*].typename = "AlertSender"
+*.car[0].udpApp[*].localPort = 3088+ancestorIndex(0) 
+*.car[0].udpApp[*].startTime = uniform(0s,0.02s)
+*.car[0].udpApp[*].destAddress = "224.0.0.10"          # IP address of the multicast group 
+*.car[0].udpApp[*].destPort = 1000
+
+# Receivers (they must belong to the above multicast group)
+*.car[1..9].udpApp[*].typename = "AlertReceiver"
+*.car[1..9].udpApp[*].localPort = 1000
+
+# enrolled multicast groups must be set in the HostAutoConfigurator (instead of demo.xml), seperated by a single space character
+*.car[*].configurator.mcastGroups = "224.0.0.10"
 
