--- a/.cproject
+++ b/.cproject
@@ -42,6 +42,7 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="org.omnetpp.cdt.gnu.config.debug.240535479.1452838370" name="omnetpp.ini" rcbsApplicability="disable" resourcePath="simulations/cars/omnetpp.ini" toolsToInvoke=""/>
 					<sourceEntries>
 						<entry excluding="corenetwork/nodes/cars" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
@@ -90,6 +91,7 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="org.omnetpp.cdt.gnu.config.release.708846711.537998507" name="omnetpp.ini" rcbsApplicability="disable" resourcePath="simulations/cars/omnetpp.ini" toolsToInvoke=""/>
 					<sourceEntries>
 						<entry excluding="corenetwork/nodes/cars" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
@@ -139,10 +141,10 @@
 		<project id="lte.org.omnetpp.cdt.omnetppProjectType.2046274091" name="OMNeT++ Simulation" projectType="org.omnetpp.cdt.omnetppProjectType"/>
 	</storageModule>
 	<storageModule moduleId="refreshScope" versionNumber="2">
-		<configuration configurationName="msvc-debug">
+		<configuration configurationName="gcc-release">
 			<resource resourceType="PROJECT" workspacePath="/lte"/>
 		</configuration>
-		<configuration configurationName="gcc-release">
+		<configuration configurationName="msvc-debug">
 			<resource resourceType="PROJECT" workspacePath="/lte"/>
 		</configuration>
 		<configuration configurationName="gcc-debug">
