--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -218,7 +218,9 @@ sim-time-limit = 70s
 [Config C-V2XMode4]
 ### Enable D2D for the eNodeB and the UEs involved in direct communications ###
 #*.eNodeB*.d2dCapable = true
+*.car[*].d2dCapable = true
 *.car[*].mode4Capable = true
+*.eNodeB*.d2dCapable = true
 **.amcMode = "D2D"
 
 ### Select CQI for D2D transmissions ###
