--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -219,7 +219,8 @@ sim-time-limit = 70s
 ### Enable D2D for the eNodeB and the UEs involved in direct communications ###
 #*.eNodeB*.d2dCapable = true
 *.car[*].d2dCapable = true
-*.car[*].mode4Capable = true
+*.car[*].**.mode4Capable = true
+#*.car[*].lteNic.mode4Capable = true
 *.eNodeB*.d2dCapable = true
 **.amcMode = "D2D"
 
@@ -245,4 +246,3 @@ sim-time-limit = 70s
 
 # enrolled multicast groups must be set in the HostAutoConfigurator (instead of demo.xml), seperated by a single space character
 *.car[*].configurator.mcastGroups = "224.0.0.10"
-
