--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -28,7 +28,7 @@ sim-time-limit = 70s
 *.veinsManager.moduleType = "lte.corenetwork.nodes.cars.Car"
 *.veinsManager.moduleName = "car"
 *.veinsManager.moduleDisplayString = ""
-*.veinsManager.launchConfig = xmldoc("heterogeneous.launchd.xml")
+*.veinsManager.launchConfig = xmldoc("highway.launchd.xml")
 *.veinsManager.updateInterval = 0.1s
 
 ##########################################################
@@ -241,8 +241,8 @@ sim-time-limit = 70s
 *.car[0].udpApp[*].destPort = 1000
 
 # Receivers (they must belong to the above multicast group)
-*.car[1..9].udpApp[*].typename = "AlertReceiver"
-*.car[1..9].udpApp[*].localPort = 1000
+*.car[*].udpApp[*].typename = "AlertReceiver"
+*.car[*].udpApp[*].localPort = 1000
 
 # enrolled multicast groups must be set in the HostAutoConfigurator (instead of demo.xml), seperated by a single space character
 *.car[*].configurator.mcastGroups = "224.0.0.10"
