Nearly there, added some new simulations

--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -28,7 +28,7 @@ sim-time-limit = 70s
 *.veinsManager.moduleType = "lte.corenetwork.nodes.cars.Car"
 *.veinsManager.moduleName = "car"
 *.veinsManager.moduleDisplayString = ""
-*.veinsManager.launchConfig = xmldoc("highway.launchd.xml")
+*.veinsManager.launchConfig = xmldoc("grid_slow.launchd.xml")
 *.veinsManager.updateInterval = 0.1s
 
 ##########################################################
@@ -60,15 +60,15 @@ sim-time-limit = 70s
 ##########################################################
 
 # Enable dynamic association of UEs (based on best SINR)
-**.dynamicCellAssociation = true
+**.dynamicCellAssociation = false
 
 **.car[*].masterId = 1     # useless if dynamic association is disabled
 **.car[*].macCellId = 1    # useless if dynamic association is disabled
 **.eNodeB1.macCellId = 1
 **.eNodeB1.macNodeId = 1
-**.eNodeB2.macCellId = 2
-**.eNodeB2.macNodeId = 2 
-**.eNodeBCount = 2
+#**.eNodeB2.macCellId = 2
+#**.eNodeB2.macNodeId = 2 
+**.eNodeBCount = 1
 
 # AMC module parameters 
 **.rbAllocationType = "localized"
@@ -91,12 +91,12 @@ sim-time-limit = 70s
 **.broadcastMessageInterval = 0.5s
 
 # X2 and SCTP configuration
-*.eNodeB*.numX2Apps = 1    # one x2App per peering eNodeB
-*.eNodeB*.x2App[*].server.localPort = 5000 + ancestorIndex(1) # Server ports (x2App[0]=5000, x2App[1]=5001, ...)
-*.eNodeB1.x2App[0].client.connectAddress = "eNodeB2%x2ppp0" 
-*.eNodeB2.x2App[0].client.connectAddress = "eNodeB1%x2ppp0" 
-**.sctp.nagleEnabled = false         # if true, transmission of small packets will be delayed on the X2
-**.sctp.enableHeartbeats = false
+#*.eNodeB*.numX2Apps = 1    # one x2App per peering eNodeB
+#*.eNodeB*.x2App[*].server.localPort = 5000 + ancestorIndex(1) # Server ports (x2App[0]=5000, x2App[1]=5001, ...)
+#*.eNodeB1.x2App[0].client.connectAddress = "eNodeB2%x2ppp0" 
+#*.eNodeB2.x2App[0].client.connectAddress = "eNodeB1%x2ppp0" 
+#**.sctp.nagleEnabled = false         # if true, transmission of small packets will be delayed on the X2
+#**.sctp.enableHeartbeats = false
 
 
 
@@ -234,11 +234,11 @@ sim-time-limit = 70s
 *.car[*].numUdpApps = 1
 
 # Transmitter
-*.car[0].udpApp[*].typename = "AlertSender"
-*.car[0].udpApp[*].localPort = 3088+ancestorIndex(0) 
-*.car[0].udpApp[*].startTime = uniform(0s,0.1s)
-*.car[0].udpApp[*].destAddress = "224.0.0.10"          # IP address of the multicast group 
-*.car[0].udpApp[*].destPort = 1000
+*.car[*].udpApp[*].typename = "AlertSender"
+*.car[*].udpApp[*].localPort = 3088+ancestorIndex(0) 
+*.car[*].udpApp[*].startTime = uniform(0s,0.1s)
+*.car[*].udpApp[*].destAddress = "224.0.0.10"          # IP address of the multicast group 
+*.car[*].udpApp[*].destPort = 1000
 
 # Receivers (they must belong to the above multicast group)
 *.car[*].udpApp[*].typename = "AlertReceiver"
