--- a/simulations/cars/highway.sumo.cfg
+++ b/simulations/cars/highway.sumo.cfg
@@ -1,6 +1,6 @@
 <configuration>
 	<input>
 		<net-file value="highway.net.xml"/>
-		<route-files value="highway_fast.rou.xml"/>
+		<route-files value="highway_slow.rou.xml"/>
 	</input>
 </configuration>
