--- a/simulations/cars/omnetpp.ini
+++ b/simulations/cars/omnetpp.ini
@@ -10,7 +10,7 @@ network = lte.simulations.cars.Highway
 debug-on-errors = false
 print-undisposed = false
 
-sim-time-limit = 50s
+sim-time-limit = 17s
 
 **.sctp.**.scalar-recording = false
 **.sctp.**.vector-recording = false
@@ -28,8 +28,10 @@ sim-time-limit = 50s
 *.veinsManager.moduleType = "lte.corenetwork.nodes.cars.Car"
 *.veinsManager.moduleName = "car"
 *.veinsManager.moduleDisplayString = ""
+#*.veinsManager.launchConfig = xmldoc("heterogeneous.launchd.xml")
 *.veinsManager.launchConfig = xmldoc("grid_slow.launchd.xml")
 *.veinsManager.updateInterval = 0.1s
+#*.veinsManager.firstStepAt = 80s
 
 ##########################################################
 #                      Mobility                          #
